# haskell-src-exts-genericpretty

./: .gitignore  Makefile  README.md  haskell-src-exts-genericpretty.cabal
examples/: Shared.hs  pretty-ast.hs  ugly-ast.hs
src/Language/Haskell/Exts/GenericPretty/: Instances.hs
