name:                haskell-src-exts-genericpretty
version:             0.1.0.0
synopsis:            GenericPretty helpers/instances for the haskell-src-exts library
description:
  GenericPretty helpers for the haskell-src-exts library, including:
  Raw pretty printers for the Language.Haskell.Exts.Syntax AST
homepage:            https://github.com/adarqui/haskell-src-exts-genericpretty
bug-reports:         http://github.com/ekmett/algebra/issues
license:             MIT
license-file:        LICENSE
author:              Andrew Darqui
maintainer:          andrew.darqui@gmail.com
category:            Language
build-type:          Simple
cabal-version:       >=1.10
tested-with:         GHC==7.8.3

extra-source-files:
                     .gitignore
                     README.md

library
  default-extensions:
    DeriveGeneric
    StandaloneDeriving
  exposed-modules:
    Language.Haskell.Exts.GenericPretty.Instances
  build-depends:     base >=4.7 && <4.8
  hs-source-dirs:    src
  default-language:  Haskell2010
  ghc-options:       -Wall

source-repository head
  type:              git
  location:          git://github.com/adarqui/haskell-src-exts-genericpretty.git
