name:                haskell-src-exts-genericpretty
version:             0.1.0.0
synopsis:            GenericPretty helpers/instances for the haskell-src-exts library
description:
  GenericPretty helpers for the haskell-src-exts library, including:
  Raw pretty printers for the Language.Haskell.Exts.Syntax AST
homepage:            https://github.com/adarqui/haskell-src-exts-genericpretty
bug-reports:         http://github.com/ekmett/algebra/issues
license:             MIT
license-file:        LICENSE
author:              Andrew Darqui
maintainer:          andrew.darqui@gmail.com
category:            Language
build-type:          Simple
cabal-version:       >=1.10
tested-with:         GHC==7.8.3

extra-source-files:
                     .gitignore
                     README.md
                     examples/*

library
  default-extensions:
                     DeriveGeneric
                     StandaloneDeriving
  exposed-modules:
                     Language.Haskell.Exts.GenericPretty.Instances
  build-depends:     base >=4.6 && <5, haskell-src-exts >= 1.16, GenericPretty >= 1.2
  hs-source-dirs:    src
  default-language:  Haskell2010
  ghc-options:       -Wall

flag                 examples
  description:       build examples
  default:           false

executable           pretty-ast
  if flag(examples)
    buildable: true
  else
    buildable: false
  main-is:           pretty-ast.hs
  build-depends:     base >=4.6 && <5, haskell-src-exts >= 1.16, GenericPretty >= 1.2, haskell-src-exts-genericpretty
  hs-source-dirs:    examples
  default-language:  Haskell2010
  ghc-options:       -Wall -O2

executable           ugly-ast
  if flag(examples)
    buildable: true
  else
    buildable: false
  main-is:           ugly-ast.hs
  build-depends:     base >=4.6 && <5, haskell-src-exts >= 1.16, GenericPretty >= 1.2, haskell-src-exts-genericpretty
  hs-source-dirs:    examples
  default-language:  Haskell2010
  ghc-options:       -Wall -O2

source-repository head
  type:              git
  location:          git://github.com/adarqui/haskell-src-exts-genericpretty.git
